[package]
name = "rg"
version = "0.1.0"
authors = ["Felix Kaaman <trundmatu@gmail.com>"]
edition = "2018"

[dependencies]
# crc = "1.5.0"
bitflags = "1.0"
unicode-segmentation = "1.2"
# font-kit = "*"
# font-kit = { path = '../font-kit', features = ["loader-freetype-default"] }
rect_packer = "0.2"
euclid = "0.19"

[dependencies.font-kit]
git = "https://github.com/fkaa/font-kit/"
branch = "freetype-fix"
features = ["loader-freetype-default"]

#[dev-dependencies.winapi]
#version = "0.3"
# features = ["everything"]

# [patch.crates-io]
# font-kit = { path = '../font-kit' }
